<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="212dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="204dp"
                android:contentDescription="@string/mainbanner"
                app:srcCompat="@drawable/aisatsu_small" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:layout_width="127dp"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:layout_gravity="center"
                        android:text="あいさつ (aisatsu): Salam " />

                </FrameLayout>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/percakapanbtn"
                        app:srcCompat="@drawable/meeting" />

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/perpisahanimg"
                        app:srcCompat="@drawable/bye" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_horizontal"
                        android:text="@string/salam_pertemuan" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="83dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_horizontal"
                        android:text="@string/perpisahan" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/askbtn"
                        app:srcCompat="@drawable/ask" />

                    <ImageButton
                        android:id="@+id/imageButdp"
                        android:layout_height="110dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/apologizeimg"
                        app:srcCompat="@drawable/apologize" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_horizontal"
                        android:text="@string/menanyakan_kabar"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_horizontal"
                        android:text="@string/permintaan_maaf"
                        app:layout_constraintVertical_bias="0.0" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/thank" />

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/congratsimg"
                        app:srcCompat="@drawable/congrats" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/textView42"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Ucapan Terima Kasih" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/ucapan_selamat" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>